Use dynamic constants for MethodHandles